<?xml version="1.0"?>
<package>
  <name>jaguar_control</name>
  <version>0.1.0</version>
  <description>DrRobot's Jaguar 4X4 controller configurations</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>
  <author email="gstavrinos@iit.demokritos.gr">George Stavrinos</author>

  <license>BSD</license>

  
  <url type="website">http://wiki.ros.org/jaguar</url>
  <url type="bugtracker">https://github.com/gstavrinos/jaguar/issues</url>
  <url type="repository">http://github.com/gstavrinos/jaguar</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>

  <export>
  </export>
</package>
