<?xml version="1.0"?>
<package>
    <name>jaguar_description</name>
    <version>1.0.0</version>
    <description>A robot description package for Dr Robot's Jaguar 4x4</description>

    <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>urdf</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>xacro</build_depend>
    <build_depend>roscpp</build_depend>

    <run_depend>urdf</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>xacro</run_depend>
    <run_depend>roscpp</run_depend>
</package>
