<?xml version="1.0"?>
<package>
    <name>jaguar_description</name>
    <version>0.1.0</version>
    <description>A robot description package for Dr Robot's Jaguar 4x4</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>
  <author email="gstavrinos@iit.demokritos.gr">George Stavrinos</author>

  <license>BSD</license>


  <url type="website">http://wiki.ros.org/jaguar</url>
  <url type="bugtracker">https://github.com/gstavrinos/jaguar/issues</url>
  <url type="repository">http://github.com/gstavrinos/jaguar</url>
  
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>urdf</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>xacro</build_depend>
    <build_depend>roscpp</build_depend>

    <run_depend>urdf</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>xacro</run_depend>
    <run_depend>roscpp</run_depend>
</package>
