<?xml version="1.0"?>
<package>
  <name>jaguar_msgs</name>
  <version>0.0.1</version>
  <description>Messages for DrRobot Jaguar</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/jaguar_msgs</url> -->
<url type="bugtracker">https://github.com/gstavrinos/jaguar/issues</url>
<url type="repository">https://github.com/gstavrinos/jaguar</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>