<?xml version="1.0"?>
<package>
  <name>jaguar_navigation</name>
  <version>0.1.0</version>
  <description>Navigation package for DrRobot's Jaguar 4X4</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>
  <author email="gstavrinos@iit.demokritos.gr">George Stavrinos</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/jaguar</url>
  <url type="bugtracker">https://github.com/gstavrinos/jaguar/issues</url>
  <url type="repository">http://github.com/gstavrinos/jaguar</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>frontier_exploration</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>


  <export>

  </export>
</package>
